§0.4.334 — the deferred §0.4.325 emit-side arc lands (authored pre-§0.4.326, cited by its commit message; in-file KDocs keep their original §0.4.325 labels). Its validation kept being interrupted by the reboot incident §0.4.333 fixed. (1) Kernel-lowered pipelines in LlamaDecoderTestHelpers: recognize → coarsen → lowerKernelChoice(target) → decomposeCoarsened, forward and backward (gradient spliced via DxirReverseTransform before lowering). (2) LlamaDecoderCustomCallEmitTest — the 'Tlaloc does something JAX doesn't' pin: one LlamaDecoderPrimal Kotlin source × four KernelTargets → four structurally different MLIR artifacts, each carrying the per-device kernel decision as stablehlo.custom_call @flash_attn_v3 / @tpu_pallas_flash_attention / @nki_flash_attention, CPU_GENERIC fully decomposed with zero custom_calls; only FlashAttention has a v1 kernel template, other patterns decompose everywhere. (3) JaxRejectsTlalocCustomCallMlirTest + harness/python/run_jax_compile_check.py — the negative pin: JAX/PJRT-XLA cannot compile the GB10 artifact (no registered @flash_attn_v3 symbol) while the CPU_GENERIC artifact from the same source compiles clean, isolating the failure to the kernel symbol; script sets XLA_PYTHON_CLIENT_PREALLOCATE=false per §0.4.333. §0.4.332's dispatch test is the positive counterpart: Tlaloc-PJRT runs what JAX rejects. (4) CustomCallTargetMatrixExample + layer3 README row; README refreshed (Tlaloc-compiler / Maestro-orchestrator framing via ProgramManifest backendMatrix, Layer 4.1/4.x rows, JDK 25 LTS, runtime module table). +7 tests, suite 1411 → 1418